--- a/capme.ipynb
+++ b/capme.ipynb
@@ -1,77 +1,139 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspiration : https://www.youtube.com/watch?v=9sHcLvVXsns&t=0s"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#load everything\n",
+    "import torch\n",
+    "from torchvision import datasets, transforms\n",
+    "import torch.nn as nn\n",
+    "from torchvision.utils import make_grid\n",
+    "\n",
+    "import sys, time\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "\n",
+    "from PIL import Image\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pycocotools.coco'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorchvision\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mdset\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorchvision\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransforms\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtransforms\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m cap \u001b[39m=\u001b[39m dset\u001b[39m.\u001b[39;49mCocoCaptions(root \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mdir where images are\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m                         annFile \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mjson annotation file\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m                         transform\u001b[39m=\u001b[39;49mtransforms\u001b[39m.\u001b[39;49mPILToTensor())\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mNumber of samples: \u001b[39m\u001b[39m'\u001b[39m, \u001b[39mlen\u001b[39m(cap))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m img, target \u001b[39m=\u001b[39m cap[\u001b[39m3\u001b[39m] \u001b[39m# load 4th sample\u001b[39;00m\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/ai50/lib/python3.9/site-packages/torchvision/datasets/coco.py:34\u001b[0m, in \u001b[0;36mCocoDetection.__init__\u001b[0;34m(self, root, annFile, transform, target_transform, transforms)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\n\u001b[1;32m     26\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m     27\u001b[0m     root: \u001b[39mstr\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m     transforms: Optional[Callable] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     32\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     33\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(root, transforms, transform, target_transform)\n\u001b[0;32m---> 34\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpycocotools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcoco\u001b[39;00m \u001b[39mimport\u001b[39;00m COCO\n\u001b[1;32m     36\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcoco \u001b[39m=\u001b[39m COCO(annFile)\n\u001b[1;32m     37\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mids \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39msorted\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcoco\u001b[39m.\u001b[39mimgs\u001b[39m.\u001b[39mkeys()))\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pycocotools.coco'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torchvision.datasets as dset\n",
-    "import torchvision.transforms as transforms\n",
-    "cap = dset.CocoCaptions(root = 'dir where images are',\n",
-    "                        annFile = 'json annotation file',\n",
-    "                        transform=transforms.PILToTensor())\n",
+    "impath = 'archive8000/Images'\n",
     "\n",
-    "print('Number of samples: ', len(cap))\n",
-    "img, target = cap[3] # load 4th sample\n",
-    "\n",
-    "print(\"Image Size: \", img.size())\n",
-    "print(target)"
+    "cappath = \"archive8000/captions.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install -U spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python -m spacy download en_core_web_sm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------\n",
+    "## Learning what is spacy\n",
+    "- In dataset loading I might need the tutorial for it ;-;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pycocotools.coco'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mmatplotlib\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minline\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpycocotools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcoco\u001b[39;00m \u001b[39mimport\u001b[39;00m COCO\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Volumes/ExternalSSDForMac/AITLecture/MLaug22/FinalProj/capme.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mskimage\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mio\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pycocotools.coco'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "from pycocotools.coco import COCO\n",
-    "import numpy as np\n",
-    "import skimage.io as io\n",
+    "# python -m spacy download en_core_web_sm\n",
+    "import spacy\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pylab\n",
-    "pylab.rcParams['figure.figsize'] = (8.0, 10.0)\n"
+    "# Load English tokenizer, tagger, parser and NER\n",
+    "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noun phrases: ['Sebastian Thrun', 'self-driving cars', 'Google', 'few people', 'the company', 'him', 'I', 'you', 'very senior CEOs', 'major American car companies', 'my hand', 'I', 'Thrun', 'an interview', 'Recode']\n",
+      "Verbs: ['start', 'work', 'drive', 'take', 'tell', 'shake', 'turn', 'talk', 'say']\n",
+      "Sebastian Thrun PERSON\n",
+      "Google ORG\n",
+      "2007 DATE\n",
+      "American NORP\n",
+      "Thrun PERSON\n",
+      "Recode ORG\n",
+      "earlier this week DATE\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = (\"When Sebastian Thrun started working on self-driving cars at \"\n",
+    "        \"Google in 2007, few people outside of the company took him \"\n",
+    "        \"seriously. “I can tell you very senior CEOs of major American \"\n",
+    "        \"car companies would shake my hand and turn away because I wasn’t \"\n",
+    "        \"worth talking to,” said Thrun, in an interview with Recode earlier \"\n",
+    "        \"this week.\")\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Analyze syntax\n",
+    "print(\"Noun phrases:\", [chunk.text for chunk in doc.noun_chunks])\n",
+    "print(\"Verbs:\", [token.lemma_ for token in doc if token.pos_ == \"VERB\"])\n",
+    "\n",
+    "# Find named entities, phrases and concepts\n",
+    "for entity in doc.ents:\n",
+    "    print(entity.text, entity.label_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- End learinng \n",
+    "----------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
